--- a/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/contexts.yaml
+++ b/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/contexts.yaml
@@ -8,3 +8,21 @@ contexts:
 - utm_zone: 35N
 - utm_zone: 36N
 - utm_zone: 37N
+- utm_zone: 38N
+- utm_zone: 39N
+- utm_zone: 40N
+- utm_zone: 41N
+- utm_zone: 42N
+- utm_zone: 43N
+- utm_zone: 44N
+- utm_zone: 45N
+- utm_zone: 46N
+- utm_zone: 47N
+- utm_zone: 48N
+- utm_zone: 49N
+- utm_zone: 50N
+- utm_zone: 51N
+- utm_zone: 52N
+- utm_zone: 53N
+- utm_zone: 54N
+- utm_zone: 55N
