--- a/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/contexts.yaml
+++ b/catalogue/copernicus-dem-utm/templates/GLO-30-UTM-N/contexts.yaml
@@ -1,4 +1,32 @@
 contexts:
+- utm_zone: 01N
+- utm_zone: 02N
+- utm_zone: 03N
+- utm_zone: 04N
+- utm_zone: 05N
+- utm_zone: 06N
+- utm_zone: 07N
+- utm_zone: 08N
+- utm_zone: 09N
+- utm_zone: 10N
+- utm_zone: 11N
+- utm_zone: 12N
+- utm_zone: 13N
+- utm_zone: 14N
+- utm_zone: 15N
+- utm_zone: 16N
+- utm_zone: 17N
+- utm_zone: 18N
+- utm_zone: 19N
+- utm_zone: 20N
+- utm_zone: 21N
+- utm_zone: 22N
+- utm_zone: 23N
+- utm_zone: 24N
+- utm_zone: 25N
+- utm_zone: 26N
+- utm_zone: 27N
+- utm_zone: 28N
 - utm_zone: 29N
 - utm_zone: 30N
 - utm_zone: 31N
@@ -26,3 +54,8 @@ contexts:
 - utm_zone: 53N
 - utm_zone: 54N
 - utm_zone: 55N
+- utm_zone: 56N
+- utm_zone: 57N
+- utm_zone: 58N
+- utm_zone: 59N
+- utm_zone: 60N
