Better thumbnail for polar datasets

--- a/catalogue/copernicus-dem-utm/GLO-30-UTM-61N/plots.yaml
+++ b/catalogue/copernicus-dem-utm/GLO-30-UTM-61N/plots.yaml
@@ -5,5 +5,6 @@ plots:
     "vmax": 5000,
     "vmin": -1285,
     "cmap": "terrain",
+    "projection": "NorthPolarStereo",
     "tickers_numbers": [30, 60]
   }
