--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-steps.yaml
@@ -15,8 +15,7 @@ steps:
       variable: [
         'boundary_layer_height',
         'total_precipitation',
-        '10m_u_component_of_wind',
-        '10m_v_component_of_wind',
+
         '2m_dewpoint_temperature',
         '2m_temperature',
         'mean_sea_level_pressure',
@@ -46,7 +45,6 @@ steps:
         'surface_solar_radiation_downwards',
         'surface_thermal_radiation_downward_clear_sky',
         'surface_thermal_radiation_downwards',
-
         'toa_incident_solar_radiation',
         'top_net_solar_radiation',
         'top_net_solar_radiation_clear_sky',
@@ -55,6 +53,15 @@ steps:
         'total_sky_direct_solar_radiation_at_surface',
         'uv_visible_albedo_for_diffuse_radiation',
         'uv_visible_albedo_for_direct_radiation'
+
+        '10m_u_component_of_wind',
+        '10m_v_component_of_wind',
+        '100m_u_component_of_wind',
+        '100m_v_component_of_wind',
+        '10m_u_component_of_neutral_wind',
+        '10m_u_component_of_wind',
+        '10m_v_component_of_neutral_wind',
+        '10m_v_component_of_wind'
       ]
     request_chunker_kwargs: { time_dim: valid_time }
     request_chunks: { day: 20 }
