--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-steps.yaml
@@ -52,7 +52,7 @@ steps:
         'top_net_thermal_radiation_clear_sky',
         'total_sky_direct_solar_radiation_at_surface',
         'uv_visible_albedo_for_diffuse_radiation',
-        'uv_visible_albedo_for_direct_radiation'
+        'uv_visible_albedo_for_direct_radiation',
 
         '10m_u_component_of_wind',
         '10m_v_component_of_wind',
@@ -61,18 +61,25 @@ steps:
         '10m_u_component_of_neutral_wind',
         '10m_u_component_of_wind',
         '10m_v_component_of_neutral_wind',
-        '10m_v_component_of_wind'
+        '10m_v_component_of_wind',
+
+        'high_cloud_cover',
+        'low_cloud_cover',
+        'medium_cloud_cover',
+        'total_cloud_cover',
+        'total_column_cloud_ice_water',
+        'total_column_cloud_liquid_water',
+        'vertical_integral_of_divergence_of_cloud_frozen_water_flux',
+        'vertical_integral_of_divergence_of_cloud_liquid_water_flux',
+        'vertical_integral_of_eastward_cloud_frozen_water_flux',
+        'vertical_integral_of_eastward_cloud_liquid_water_flux',
+        'vertical_integral_of_northward_cloud_frozen_water_flux',
+        'vertical_integral_of_northward_cloud_liquid_water_flux'
       ]
     request_chunker_kwargs: { time_dim: valid_time }
     request_chunks: { day: 20 }
   chunks: {latitude: 256, longitude: 256}
   robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 1}
-  to_zarr_encoding:
-    d2m: {dtype: float16}
-    t2m: {dtype: float16}
-    tp: {dtype: float16}
-    u10: {dtype: float16}
-    v10: {dtype: float16}
   to_zarr_kwargs: {
     store: s3://ecmwf-era5-single-levels-tmp/reanalysis-era5-single-levels.zarr,
     write_empty_chunks: false
