--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-ICON/0001-high-sfc-ICON/__item__.yaml
@@ -68,7 +68,7 @@ properties:
   dc:extent: 23.5 TB
 assets:
   data:
-    href: https://data.earthdatahub.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-v0.zarr
+    href: https://cacheb.dcms.destine.eu/d1-climate-dt/ScenarioMIP-SSP3-7.0-ICON-0001-high-sfc-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
