--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
@@ -59,7 +59,7 @@ properties:
   dc:extent: 588 GB
 assets:
   data:
-    href: https://data.earthdatahub.com/d1-climate-dt/story-nudging-Tplus2.0K-IFS-FESOM-0001-high-sfc-v0.zarr
+    href: https://cacheb.dcms.destine.eu/d1-climate-dt/story-nudging-Tplus2.0K-IFS-FESOM-0001-high-sfc-v0.zarr
     roles:
     - data
     xarray:open_kwargs:
