--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/0001-high-sfc-Tplus2.0K/__item__.yaml
@@ -14,7 +14,7 @@ properties:
     DestinE Climate DT future projection simulation (activity `story-nudging`, experiment
     `Tplus2.0K`) from the IFS-FESOM model at high resolution on surface levels
   dc:title: Climate DT, story-nudging, Tplus2.0K, IFS-FESOM, hourly data on single-levels
-  dc:access_rights: free of charge
+  dc:access_rights: restricted
   dc:description: High resolution Climate DT hourly on single levels - Tplus2.0K -
     IFS-FESOM
   start_datetime: '2017-01-01T00:00:00Z'
