--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-o2d/__item__.yaml
@@ -13,7 +13,7 @@ properties:
   dc:abstract: This dataset contains a selection of the variables available from the  DestinE
     Climate DT future projection simulation (activity `ScenarioMIP`, experiment `SSP3-7.0`)  from
     the IFS-NEMO model at high resolution on ocean variables
-  dc:access_rights: free of charge
+  dc:access_rights: restricted
   dc:title: Climate DT, ScenarioMIP, SSP3-7.0, IFS-NEMO, daily data on ocean and sea-ice,
     HR
   dc:description: High resolution Climate DT daily on ocean single levels - SSP3-7.0
