--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -19,7 +19,7 @@ properties:
   dc:title: ERA5 hourly data on single levels
   start_datetime: '1940-01-01T00:00:00Z'
   end_datetime: '2023-12-31T23:00:00Z'
-  dc:access_rights: free of charge
+  dc:access_rights: unrestricted
   dc:subject:
   - ERA5
   - ECMWF
