--- a/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
@@ -40,11 +40,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_A2000_THS_HD:
       dimensions:
@@ -1249,14 +1255,14 @@ properties:
       type: data
       description: 'Live animals: Other goats; NUTS_Level: L2'
       unit: Thousand heads (animals)
-  dc:extent: 18.0 GiB
+  dc:extent: 18 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/agr_r_animal-19770101-20230101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/agr_r_animal-19770101-20230101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/agr_r_animal-19770101-20230101.zarr
     roles:
     - data
     xarray:open_kwargs:
