--- a/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
@@ -41,11 +41,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_NR_CDD:
       dimensions:
@@ -111,14 +117,14 @@ properties:
       type: data
       description: 'NUTS_Level: L3; Energy indicator: Heating degree days'
       unit: Number
-  dc:extent: 1.0 GiB
+  dc:extent: 1 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/nrg_chddr2_a-19790101-20220101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/nrg_chddr2_a-19790101-20220101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/nrg_chddr2_a-19790101-20220101.zarr
     roles:
     - data
     xarray:open_kwargs:
