--- a/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
@@ -39,11 +39,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_I05:
       dimensions:
@@ -69,14 +75,14 @@ properties:
       type: data
       description: 'NUTS_Level: L0'
       unit: Tonnes of oil equivalent (TOE) per capita
-  dc:extent: 0.0 GiB
+  dc:extent: 0 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/sdg_07_11-20000101-20210101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/sdg_07_11-20000101-20210101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/sdg_07_11-20000101-20210101.zarr
     roles:
     - data
     xarray:open_kwargs:
