--- a/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
@@ -39,11 +39,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_MIO_EUR_S1311_B9:
       dimensions:
@@ -738,14 +744,14 @@ properties:
       description: 'NUTS_Level: L0; Sector: Total economy; National accounts indicator
         (ESA 2010): Gross national income at market prices'
       unit: Percentage of gross domestic product (GDP)
-  dc:extent: 6.0 GiB
+  dc:extent: 6 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/gov_10dd_edpt1-19950101-20220101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/gov_10dd_edpt1-19950101-20220101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/gov_10dd_edpt1-19950101-20220101.zarr
     roles:
     - data
     xarray:open_kwargs:
