--- a/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
@@ -40,11 +40,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_BES_EUR_HAB:
       dimensions:
@@ -928,14 +934,14 @@ properties:
       type: data
       description: 'Sector of performance: All sectors; NUTS_Level: L2'
       unit: Purchasing power standard (PPS) per inhabitant at constant 2005 prices
-  dc:extent: 12.0 GiB
+  dc:extent: 12 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/rd_e_gerdreg-19800101-20220101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/rd_e_gerdreg-19800101-20220101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/rd_e_gerdreg-19800101-20220101.zarr
     roles:
     - data
     xarray:open_kwargs:
