--- a/catalogue/eurostat/geoprocessed-eurostat-population-demo_r_pjanaggr3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-demo_r_pjanaggr3/__item__.yaml
@@ -39,11 +39,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_NR_F_TOTAL:
       dimensions:
@@ -525,14 +531,14 @@ properties:
       type: data
       description: 'NUTS_Level: L3; Sex: Total; Age class: Less than 15 years'
       unit: Number
-  dc:extent: 5.0 GiB
+  dc:extent: 5 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/demo_r_pjanaggr3-19900101-20220101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/demo_r_pjanaggr3-19900101-20220101.zarr
+    href: https://data.earthdatahub.destine.eu/eurostat/demo_r_pjanaggr3-19900101-20220101.zarr
     roles:
     - data
     xarray:open_kwargs:
