--- a/catalogue/eurostat/geoprocessed-eurostat-soil-erosion-aei_pr_soiler/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-soil-erosion-aei_pr_soiler/__item__.yaml
@@ -43,11 +43,17 @@ properties:
       axis: y
       reference_system: 4326
       step: 0.1
+      extent:
+      - 26.0
+      - 73.9
     lon:
       type: spatial
       axis: x
       reference_system: 4326
       step: 0.1
+      extent:
+      - -27.0
+      - 44.9
   cube:variables:
     L0_MOD_CLC23_321_HA:
       dimensions:
@@ -2374,14 +2380,14 @@ properties:
         beaches, dunes, sand plains, bare rock and glaciers and perpetual snow); NUTS_Level:
         L3'
       unit: Tonnes per hectare
-  dc:extent: 2.0 GiB
+  dc:extent: 2 GB
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/aei_pr_soiler-20000101-20160101.png
     roles:
     - thumbnail
   data:
-    href: https://earthdatahub.com/stores/eurostat/aei_pr_soiler-20000101-20160101.zarr/
+    href: https://data.earthdatahub.destine.eu/eurostat/aei_pr_soiler-20000101-20160101.zarr/
     roles:
     - data
     xarray:open_kwargs:
