--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -52,38 +52,54 @@ properties:
       reference_system: 4326
       step: 0.25
   cube:variables:
-    t2m:
+    alnid:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: 2 metre temperature
-      unit: K
-    tp:
+      description: Near IR albedo for diffuse radiation (climatological)
+      unit: (0 - 1)
+    alnip:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: Total precipitation
+      description: Near IR albedo for direct radiation (climatological)
+      unit: (0 - 1)
+    aluvd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: UV visible albedo for diffuse radiation (climatological)
+      unit: (0 - 1)
+    aluvp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: UV visible albedo for direct radiation (climatological)
+      unit: (0 - 1)
+    blh:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Boundary layer height
       unit: m
-    u10:
+    cdir:
       dimensions:
       - valid_time
       - latitude
       - longitude
       type: data
-      description: 10 metre U wind component
-      unit: m s**-1
-    v10:
-      dimensions:
-      - valid_time
-      - latitude
-      - longitude
-      type: data
-      description: 10 metre V wind component
-      unit: m s**-1
+      description: Surface direct short-wave radiation, clear sky
+      unit: J m**-2
     d2m:
       dimensions:
       - valid_time
@@ -92,7 +108,319 @@ properties:
       type: data
       description: 2 metre dewpoint temperature
       unit: K
-  dc:extent: 15.3 TB
+    fdir:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total sky direct short-wave (solar) radiation at surface
+      unit: J m**-2
+    flsr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Forecast logarithm of surface roughness for heat
+      unit: Numeric
+    ie:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Instantaneous moisture flux
+      unit: kg m**-2 s**-1
+    inss:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Instantaneous northward turbulent surface stress
+      unit: N m**-2
+    ishf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Instantaneous surface sensible heat flux
+      unit: W m**-2
+    istl1:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Ice temperature layer 1
+      unit: K
+    istl2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Ice temperature layer 2
+      unit: K
+    istl3:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Ice temperature layer 3
+      unit: K
+    istl4:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Ice temperature layer 4
+      unit: K
+    mn2t:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Minimum temperature at 2 metres since previous post-processing
+      unit: K
+    msl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Mean sea level pressure
+      unit: Pa
+    mx2t:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Maximum temperature at 2 metres since previous post-processing
+      unit: K
+    skt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Skin temperature
+      unit: K
+    slhf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface latent heat flux
+      unit: J m**-2
+    sp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface pressure
+      unit: Pa
+    sshf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface sensible heat flux
+      unit: J m**-2
+    ssr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net short-wave (solar) radiation
+      unit: J m**-2
+    ssrc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net short-wave (solar) radiation, clear sky
+      unit: J m**-2
+    ssrd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface short-wave (solar) radiation downwards
+      unit: J m**-2
+    ssrdc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface short-wave (solar) radiation downward clear-sky
+      unit: J m**-2
+    sst:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Sea surface temperature
+      unit: K
+    str:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net long-wave (thermal) radiation
+      unit: J m**-2
+    strc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface net long-wave (thermal) radiation, clear sky
+      unit: J m**-2
+    strd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface long-wave (thermal) radiation downwards
+      unit: J m**-2
+    strdc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface long-wave (thermal) radiation downward clear-sky
+      unit: J m**-2
+    t2m:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 2 metre temperature
+      unit: K
+    tisr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: TOA incident short-wave (solar) radiation
+      unit: J m**-2
+    tp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total precipitation
+      unit: m
+    tsr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Top net short-wave (solar) radiation
+      unit: J m**-2
+    tsrc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Top net short-wave (solar) radiation, clear sky
+      unit: J m**-2
+    ttr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Top net long-wave (thermal) radiation
+      unit: J m**-2
+    ttrc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Top net long-wave (thermal) radiation, clear sky
+      unit: J m**-2
+    u10:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre U wind component
+      unit: m s**-1
+    u100:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 100 metre U wind component
+      unit: m s**-1
+    u10n:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre u-component of neutral wind
+      unit: m s**-1
+    uvb:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Downward UV radiation at the surface
+      unit: J m**-2
+    v10:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre V wind component
+      unit: m s**-1
+    v100:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 100 metre V wind component
+      unit: m s**-1
+    v10n:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 10 metre v-component of neutral wind
+      unit: m s**-1
+  dc:extent: 140.7 TB
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-single-levels-v0.zarr
