--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-setup.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/ingestion-setup.yaml
@@ -13,24 +13,19 @@ steps:
       time: [ '00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00' ]
       product_type: reanalysis
       variable: [
-        'high_cloud_cover',
-        'low_cloud_cover',
-        'medium_cloud_cover',
-        'total_cloud_cover',
-        'total_column_cloud_ice_water',
-        'total_column_cloud_liquid_water',
-        'vertical_integral_of_divergence_of_cloud_frozen_water_flux',
-        'vertical_integral_of_divergence_of_cloud_liquid_water_flux',
-        'vertical_integral_of_eastward_cloud_frozen_water_flux',
-        'vertical_integral_of_eastward_cloud_liquid_water_flux',
-        'vertical_integral_of_northward_cloud_frozen_water_flux',
-        'vertical_integral_of_northward_cloud_liquid_water_flux'
+        'evaporation',
+        'potential_evaporation',
+        'runoff',
+        'sub_surface_runoff',
+        'surface_runoff',
+
+        'geopotential',
       ]
     request_chunker_kwargs: { time_dim: valid_time }
     request_chunks: { day: 20 }
   chunks: {latitude: 256, longitude: 256}
   robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 1}
   to_zarr_kwargs: {
-    store: s3://ecmwf-era5-single-levels-tmp/reanalysis-era5-single-levels.zarr,
+    store: s3://edc-intermediate/reanalysis-era5-single-levels-v0.zarr,
     write_empty_chunks: false
   }
