--- a/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: Hybrid gridded demographic data for the world, 1950-2020 0.25˚ resolution
+- title: "Hybrid gridded demographic data for the world, 1950-2020 0.25\u02DA resolution"
   rel: derived_from
   href: https://doi.org/10.5281/zenodo.6011021
   type: text/html
@@ -9,13 +9,14 @@ links:
   type: text/html
 bbox:
 - 0.0
-- -57.1
-- 359.9
+- -89.8
+- 359.8
 - 90.0
 properties:
   edh:maturity: draft
-  dc:abstract: This is a hybrid gridded dataset of demographic data for the world, given as 5-year population bands at a 0.25 degree grid resolution.
-  dc:title: Hybrid gridded demographic data for the world, 1950-2020 0.25˚ resolution
+  dc:abstract: This is a hybrid gridded dataset of demographic data for the world,
+    given as 5-year population bands at a 0.25 degree grid resolution.
+  dc:title: "Hybrid gridded demographic data for the world, 1950-2020 0.25\u02DA resolution"
   start_datetime: '1950-01-01T00:00:00Z'
   end_datetime: '2020-01-01T00:00:00Z'
   dc:access_rights: unrestricted
@@ -23,32 +24,42 @@ properties:
   - Zenodo
   - population
   cube:dimensions:
-    valid_time:
+    year:
       type: temporal
+      step: PT1Y
       extent:
-      - '1950-01-01T00:00:00Z'
-      - '2023-09-30T00:00:00Z'
-      step: PT1H
+      - 1950
+      - 2020
     latitude:
       type: spatial
       axis: y
       reference_system: 4326
-      step: 0.1
+      step: 0.25
       extent:
       - 90.0
-      - -57.1
+      - -89.8
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
-      step: 0.1
+      step: 0.25
       extent:
       - 0.0
-      - 359.9
-  dc:extent: 687.5 TB
+      - 359.8
+    age_band_lower_bound:
+      type: other
+  dc:extent: 4 GB
+  cube:variables:
+    demographic_totals:
+      dimensions:
+      - latitude
+      - longitude
+      - age_band_lower_bound
+      - year
+      type: data
 assets:
   data:
-    href: https://data.earthdatahub.destine.eu/public/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min-v0
+    href: https://hedp-data.bopen.eu/public/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min-v0
     roles:
     - data
     xarray:open_kwargs:
