--- a/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/__collection__.yaml
@@ -13,6 +13,7 @@ extent:
     interval:
     - - "1950-01-01T00:00:00Z"
       - "2020-01-01T00:00:00Z"
+links: []
 license: CC-BY-4.0
 keywords:
 - Zenodo
