--- a/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/plots.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/plots.yaml
@@ -1,9 +1,9 @@
 plots:
 - var: "demographic_totals"
-  sel: {"year": 2020},
-  coarsen: {"age_band_lower_bound": 100},
+  sel: {"year": 2020}
+  coarsen: {"age_band_lower_bound": 10}
   plot_kwargs: {
-    "vmax": 500_000,
+    "vmax": 75_000,
     "vmin": 0,
-    "cmap": "Browns"
+    "cmap": "Oranges"
   }
