--- a/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
+++ b/catalogue/derived-GPWv4-Histsoc/demographics-hybrid-1950-2020-15-min/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: "Hybrid gridded demographic data for the world, 1950-2020 0.25\u02DA resolution"
+- title: Hybrid gridded demographic data for the world, 1950-2020 0.25° resolution
   rel: derived_from
   href: https://doi.org/10.5281/zenodo.6011021
   type: text/html
