--- a/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
@@ -12,6 +12,18 @@ bbox:
 - -90.0
 - 359.8
 - 90.0
+assets:
+  data:
+    href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-pressure-levels-v0.zarr
+    roles:
+    - data
+    xarray:open_kwargs:
+      engine: zarr
+      chunks: {}
+    xarray:storage_options:
+      client_kwargs:
+        trust_env: true
+search_weight: 50
 properties:
   edh:maturity: draft
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
@@ -51,16 +63,14 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 140.7 TB
-assets:
-  data:
-    href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-pressure-levels-v0.zarr
-    roles:
-    - data
-    xarray:open_kwargs:
-      engine: zarr
-      chunks: {}
-    xarray:storage_options:
-      client_kwargs:
-        trust_env: true
-search_weight: 50
+  dc:extent: 58.1 TB
+  cube:variables:
+    t:
+      dimensions:
+      - valid_time
+      - isobaricInhPa
+      - latitude
+      - longitude
+      type: data
+      description: Temperature
+      unit: K
