--- a/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
+++ b/catalogue/d1-climate-dt-ScenarioMIP-SSP3-7.0-IFS-NEMO/0001-high-pl/plots.yaml
@@ -1,7 +1,7 @@
 plots:
 - var: "r"
   time_dim: "time"
-  selection: {"time": 720, "isobaricInhPa": 1}
+  isel: {"time": 720, "isobaricInhPa": 1}
   coarsen: {latitude: 8, longitude: 8}
   plot_kwargs: {
     'vmax': 110,
