--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -420,7 +420,295 @@ properties:
       type: data
       description: 10 metre v-component of neutral wind
       unit: m s**-1
-  dc:extent: 140.7 TB
+    cl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake cover
+      unit: (0 - 1)
+    cp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective precipitation
+      unit: m
+    crr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective rain rate
+      unit: kg m**-2 s**-1
+    dl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake total depth
+      unit: m
+    e:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Evaporation
+      unit: m of water equivalent
+    hcc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: High cloud cover
+      unit: (0 - 1)
+    ilspf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Instantaneous large-scale surface precipitation fraction
+      unit: (0 - 1)
+    lblt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake bottom temperature
+      unit: K
+    lcc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Low cloud cover
+      unit: (0 - 1)
+    licd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake ice total depth
+      unit: m
+    lict:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake ice surface temperature
+      unit: K
+    lmld:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake mix-layer depth
+      unit: m
+    lmlt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake mix-layer temperature
+      unit: K
+    lshf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake shape factor
+      unit: dimensionless
+    lsp:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large-scale precipitation
+      unit: m
+    lspf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large-scale precipitation fraction
+      unit: s
+    lsrr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large scale rain rate
+      unit: kg m**-2 s**-1
+    ltlt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Lake total layer temperature
+      unit: K
+    mcc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Medium cloud cover
+      unit: (0 - 1)
+    mntpr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Minimum total precipitation rate since previous post-processing
+      unit: kg m**-2 s**-1
+    mxtpr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Maximum total precipitation rate since previous post-processing
+      unit: kg m**-2 s**-1
+    pev:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Potential evaporation
+      unit: m
+    ptype:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Precipitation type
+      unit: (Code table 4.201)
+    ro:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Runoff
+      unit: m
+    sro:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Surface runoff
+      unit: m
+    ssro:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Sub-surface runoff
+      unit: m
+    tcc:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total cloud cover
+      unit: (0 - 1)
+    tciw:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column cloud ice water
+      unit: kg m**-2
+    tclw:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column cloud liquid water
+      unit: kg m**-2
+    tcrw:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column rain water
+      unit: kg m**-2
+    viiwd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Vertical integral of divergence of cloud frozen water flux
+      unit: kg m**-2 s**-1
+    viiwe:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Vertical integral of eastward cloud frozen water flux
+      unit: kg m**-1 s**-1
+    viiwn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: 'Vertical integral of northward cloud frozen water flux '
+      unit: kg m**-1 s**-1
+    vilwd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Vertical integral of divergence of cloud liquid water flux
+      unit: kg m**-2 s**-1
+    vilwe:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Vertical integral of eastward cloud liquid water flux
+      unit: kg m**-1 s**-1
+    vilwn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Vertical integral of northward cloud liquid water flux
+      unit: kg m**-1 s**-1
+  dc:extent: 250.8 TB
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/era5/reanalysis-era5-single-levels-v0.zarr
