--- a/catalogue/era5/reanalysis-era5-land/ingestion/second-ingestion-step-dev.yaml
+++ b/catalogue/era5/reanalysis-era5-land/ingestion/second-ingestion-step-dev.yaml
@@ -8,13 +8,13 @@ steps:
       'depthBelowLandLayer',
       'latitude',
       'longitude',
+      'valid_time',
       'number',
       'surface',
     ]
   chunks: {latitude: 64, longitude: 64, valid_time: 2880}
   robust_to_zarr_kwargs: {time_dim: valid_time, time_restart_block: 8}
   to_zarr_kwargs:
-    store: s3://edc-era5/reanalysis-era5-land-no-antartica-v0.zarr
+    store: 's3://edc-era5/reanalysis-era5-land-no-antartica-v0-dev.zarr'
     write_empty_chunks: false
-    consolidated: true
 
