--- a/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/single-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/ingestion/single-ingestion-step.yaml
@@ -1,6 +1,5 @@
 steps:
-- request_client_class_name: cads-api-client
-  xarray_open_kwargs:
+- xarray_open_kwargs:
     cache_kwargs: {cache_file: false}
     open_dataset_kwargs:
       time_dims: [valid_time]
@@ -8,7 +7,7 @@ steps:
     engine: ecmwf
     filename_or_obj:
       area: ['90', '0', '-90', '360']
-      collection_id: reanalysis-era5-pressure-levels
+      dataset: reanalysis-era5-pressure-levels
       date: [1940-01-01/2023-12-31]
       time: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00']
       product_type: reanalysis
