--- a/catalogue/copernicus-dem-utm/__collection__.yaml
+++ b/catalogue/copernicus-dem-utm/__collection__.yaml
@@ -3,7 +3,7 @@ dc:abstract:
   The Copernicus DEM is a Digital Surface Model (DSM) that represents
   the surface of the Earth including buildings, infrastructure and vegetation.
   We propose a subset of the whole corpus of data based on the most popular datasets.
-edh:maturity: draft
+edh:maturity: published
 links:
 - title: Copernicus DEM documentation
   rel: derived_from
