--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
@@ -1,10 +1,8 @@
 title: DestinE Climate Adaptation DT, activity story-nudging, experiment Tplus2.0K, model IFS-FESOM
 dc:abstract:
-  The DestinE Digital Twin for Climate Change Adaptation (Climate DT) supports adaptation activities 
-  through the provision of innovative climate information on multi-decadal timescales, 
-  at scales at which the impacts of climate change are observed. 
-  This initiative presents the first ever attempt to operationalise the production of 
-  global multi-decadal climate projections at km-scale resolutions of 5 to 10km.
+  The DestinE Digital Twin for Climate Change Adaptation (Climate DT) supports 
+  adaptation activities through the provision of innovative climate information on multi-decadal 
+  timescales, at km-scale resolutions of 5 to 10km.
 edh:maturity: draft
 links:
 - title: DestinE Digital Twin for Climate Change Adaptation
